chore: Update page title to "Clone Detector" and improve form layout

--- a/s.html
+++ b/s.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Title</title>
+    <title>Clone Detector</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="css/uikit.min.css" />
@@ -11,32 +11,40 @@
 </head>
 
 <body>
-    <form method="POST">
-        <textarea name="code1" rows="10" cols="50">{{code1}}</textarea>
-        <textarea name="code2" rows="10" cols="50">{{code2}}</textarea>
-        <select name="language">
-            <option value="c" {% if language=='c' %}selected{% endif %}>C</option>
-            <option value="python" {% if language=='python' %}selected{% endif %}>Python</option>
-        </select>
-        <input type="submit" value="Compare">
-    </form>
-    <p>Text Similarity: {{text_sim}}</p>
-    <p>Token Similarity (with order): {{token_sim_with_order}}</p>
-    <p>Token Similarity (with order ignoring comments and whitespaces): {{token_sim_with_order_without_comments}}</p>
-    <p>Token Similarity (without order with comments and whitespaces): {{token_sim}}</p>
-    <p>Token Similarity (without order ignoring comments and whitespaces): {{token_sim_without_comments}}</p>
-    <p>Renamed Clone Similarity: {{renamed_clone_sim}}</p>
-    <p>Exact Clone: {{exact_clone_result}}</p>
-    <p>Near-miss Clone: {{near_miss_clone_result}}</p>
-    <p>Parameterized Clone: {{parameterized_clone_result}}</p>
-    <p>Function Clone: {{function_clone_result}}</p>
-    <p>Non-contiguous Clone: {{non_contiguous_clone_result}}</p>
-    <p>Structural Clone: {{structural_clone_result}}</p>
-    <p>Reordered Clone: {{reordered_clone_result}}</p>
-    <p>Function Reordered Clone: {{function_reordered_clone_result}}</p>
-    <p>Gapped Clone: {{gapped_clone_result}}</p>
-    <p>Intertwined Clone: {{intertwined_clone_result}}</p>
-    <p>Semantic Clone: {{semantic_clone_result}}</p>
+    <div class="uk-container">
+        <form method="POST">
+            <fieldset class="uk-fieldset">
+
+                <div class="uk-margin">
+                    <legend class="uk-legend">Legend</legend>
+                    <textarea class="uk-textarea" name="code1" rows="10" cols="50"></textarea>
+                    <textarea class="uk-textarea" name="code2" rows="10" cols="50"></textarea>
+                    <select class="uk-select" name="language">
+                        {{language_options_html|safe}}
+                    </select>
+                    <input type="submit" value="Compare">
+                </div>
+        </form>
+        <p>Text Similarity: {{text_sim}}</p>
+        <p>Token Similarity (with order): {{token_sim_with_order}}</p>
+        <p>Token Similarity (with order ignoring comments and whitespaces): {{token_sim_with_order_without_comments}}
+        </p>
+        <p>Token Similarity (without order with comments and whitespaces): {{token_sim}}</p>
+        <p>Token Similarity (without order ignoring comments and whitespaces): {{token_sim_without_comments}}</p>
+        <p>Renamed Clone Similarity: {{renamed_clone_sim}}</p>
+        <p>Exact Clone: {{exact_clone_result}}</p>
+        <p>Near-miss Clone: {{near_miss_clone_result}}</p>
+        <p>Parameterized Clone: {{parameterized_clone_result}}</p>
+        <p>Function Clone: {{function_clone_result}}</p>
+        <p>Non-contiguous Clone: {{non_contiguous_clone_result}}</p>
+        <p>Structural Clone: {{structural_clone_result}}</p>
+        <p>Reordered Clone: {{reordered_clone_result}}</p>
+        <p>Function Reordered Clone: {{function_reordered_clone_result}}</p>
+        <p>Gapped Clone: {{gapped_clone_result}}</p>
+        <p>Intertwined Clone: {{intertwined_clone_result}}</p>
+        <p>Semantic Clone: {{semantic_clone_result}}</p>
+    </div>
+    </fieldset>
 </body>
 
 </html>
